Fixed header vertical align

--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ body {
 .header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .nav {
